adding logic for horizontal partitioning